--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.x
+      - run: pip install numpy
       - run: pip install mkdocs-material
       - run: pip install mkdocstrings
       - run: mkdocs gh-deploy --force
