--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,12 @@ theme:
 
 plugins:
   
-  - mkdocstrings
+  - mkdocstrings:
+      handlers:
+        python:
+          setup_commands:
+              - import sys
+              - sys.path.append('./')
 
 nav:
   - Home: 'index.md'
