--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,5 +16,5 @@ jobs:
       - run: pip install scipy
       - run: pip install numpy
       - run: pip install mkdocs-material
-      - run: pip install mkdocstrings
+      - run: pip install mkdocstrings[python]
       - run: mkdocs gh-deploy --force
