--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pyneb"
-"version" = "1.1.23"
+"version" = "1.1.23b1"
 requires-python = ">= 3.8"
 dependencies = [
 "numpy",
