update for use of pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["setuptools", "wheel"]
+requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "pyneb"
-"version" = "1.1.23b1"
+version = "1.1.23b9"
 requires-python = ">= 3.8"
 dependencies = [
 "numpy",
@@ -30,3 +30,21 @@ Changelog = "https://github.com/Morisset/PyNeb_devel/tree/master/docs/CHANGES"
 
 [project.optional-dependencies]
 
+[tool.setuptools]
+packages=['pyneb',
+		  'pyneb.core',
+		  'pyneb.plot',
+		  'pyneb.utils',
+		  'pyneb.extinction']
+
+[tool.setuptools.package-data]
+'pyneb'=['atomic_data_fits/*.fits',
+			     'atomic_data_fits/*.hdf5',
+			     'atomic_data_fits/old_fits/*.fits',
+			     'atomic_data/*.dat',
+			     'atomic_data/*.func',
+			     'atomic_data/*.txt',
+			     'atomic_data/levels/*.dat',
+                 'atomic_data/deprecated/*.dat']
+'pyneb.extinction'=['*.txt']
+'pyneb.plot'=['level_diagrams/*.png']
