--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
           python-version: 3.8.x
       - name: Install dependencies
         run: python -m pip install --upgrade pip
-#          pip install scipy numpy matplotlib astropy h5py
+          pip install pyneb
       - name: Test with pytest
         run: |
           pip install pytest
