--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,8 +16,7 @@ jobs:
         with:
           python-version: 3.8.x
       - name: Install dependencies
-        run: python -m pip install --upgrade pip
-          pip install pyneb
+        run: python -m pip install --upgrade pip pyneb
       - name: Test with pytest
         run: |
           pip install pytest
