--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "pyneb"
 version = "1.1.24b3"
 requires-python = ">= 3.8"
-dependencies = [
-"numpy",
-"matplotlib",
-"scipy",
-"h5py",
-"astropy",
-]
+dynamic = ["dependencies"]
 description = "A Python package for nebular analysis"
 authors = [
     { name = "Christophe Morisset", email = "chris.morisset@gmail.com" },
@@ -46,3 +40,6 @@ packages=['pyneb',
                  'atomic_data/deprecated/*.dat']
 'pyneb.extinction'=['*.txt']
 'pyneb.plot'=['level_diagrams/*.png']
+
+[tool.setuptools.dynamic]
+dependencies = {file = ["requirements.txt"]}
