--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,8 +16,10 @@ jobs:
         with:
           python-version: 3.8.x
       - name: Install dependencies
-        run: python -m pip install --upgrade pip
+        run: |
+          python -m pip install --upgrade pip
           pip install scipy numpy matplotlib astropy h5py
+          pip install .
       - name: Test with pytest
         run: |
           pip install pytest
