--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install scipy numpy matplotlib astropy h5py
+          #pip install scipy numpy matplotlib astropy h5py
           pip install .
       - name: Test with pytest
         run: |
