--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,4 +23,4 @@ jobs:
       - name: Test with pytest
         run: |
           pip install pytest
-          pytest pyneb/test --doctest-modules --junitxml=junit/test-results.xml
+          pytest tests --doctest-modules --junitxml=junit/test-results.xml
