--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pyneb"
-version = "1.1.27b1"
+version = "1.1.27"
 requires-python = ">= 3.8"
 dynamic = ["dependencies"]
 description = "A Python package for nebular analysis"
@@ -31,13 +31,13 @@ packages=['pyneb',
 
 [tool.setuptools.package-data]
 'pyneb'=['atomic_data_fits/*.fits',
-		'atomic_data_fits/*.hdf5',
-		'atomic_data_fits/old_fits/*.fits',
-		'atomic_data/*.dat',
-		'atomic_data/*.func',
-		'atomic_data/*.txt',
-		'atomic_data/levels/*.dat',
-        'atomic_data/deprecated/*.dat']
+			     'atomic_data_fits/*.hdf5',
+			     'atomic_data_fits/old_fits/*.fits',
+			     'atomic_data/*.dat',
+			     'atomic_data/*.func',
+			     'atomic_data/*.txt',
+			     'atomic_data/levels/*.dat',
+                 'atomic_data/deprecated/*.dat']
 'pyneb.extinction'=['*.txt']
 'pyneb.plot'=['level_diagrams/*.png']
 
